# bassicraft

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Bassicraft.hpp  Chunk.hpp  Constants.hpp  Cube.hpp  InstanceData.hpp  Inventory.hpp  Particle.hpp  Player.hpp  TextureDataStruct.hpp  UniformBufferObject.hpp  Utils.hpp  Vertex.hpp  VkBootstrap.h  VkEngine.hpp
shaders/: blocks_frag.spv  blocks_shader.frag  blocks_shader.vert  blocks_vert.spv  frag.spv  particles_frag.spv  particles_geom.spv  particles_shader.frag  particles_shader.geom  particles_shader.vert  particles_vert.spv  shader.frag  shader.vert  vert.spv
src/: Bassicraft.cpp  Chunk.cpp  VkBootstrap.cpp  VkEngine.cpp  main.cpp  utils.cpp
